# marmalade

./: .gitignore  CLAUDE.md  README.md  dep_railway.json  nixpacks.toml  package.json  railway.json
.github/workflows/: test.yml
api/: Dockerfile  README.md  main.py  nixpacks.toml  pyproject.toml  railway.json
api/core/: chunks.py
api/tests/: test_chunks.py
dep_src/lib/utils/: chunking.js
dep_src/routes/: +page.svelte
deprecated/: package.json  vite.config.js
deprecated/.svelte-kit/: ambient.d.ts
deprecated/.svelte-kit/adapter-node/: manifest.js
deprecated/.svelte-kit/adapter-node/.vite/: manifest.json
deprecated/.svelte-kit/adapter-node/chunks/: index.js  internal.js
deprecated/.svelte-kit/output/client/.vite/: manifest.json
deprecated/.svelte-kit/output/server/: index.js  manifest.js
deprecated/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
deprecated/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
deprecated/dep_core/: __init__.py
deprecated/dep_src/routes/: +layout.js  +layout.svelte
deprecated/marmalade/: main.py
deprecated/marmalade/src/marmalade/: __init__.py
deprecated/marmalade/src/marmalade.egg-info/: PKG-INFO  requires.txt
docs/: SVELTE.md
marmalade/: pyproject.toml
marmalade/src/marmalade/: chunks.py
marmalade/src/marmalade.egg-info/: SOURCES.txt
src/lib/data/: samples.js
src/lib/tokenizer/: index.js  index.test.js
src/lib/utils/: chunking.js  strategies.js  themes.js  tokenization.js  tokenizers.js
src/routes/: +page.js  +page.svelte
(+2 files in other folders)
