[project]
name = "marmalade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tokenizers>=0.22.1",
]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "ipython>=9.7.0",
    "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
